--- a/app/components/layout/home.html
+++ b/app/components/layout/home.html
@@ -1,1 +1,13 @@
-This is home
+<nav class="navbar navbar-inverse" role="navigation">
+    <div class="navbar-header">
+        <a class="navbar-brand" ui-sref="#">Identity Manager</a>
+    </div>
+    <ul class="nav navbar-nav">
+        <li><a ui-sref="home">Home</a></li>
+        <li><a ui-sref="about">About</a></li>
+        <li><a ui-sref="logout">Logout</a></li>
+    </ul>
+</nav>
+<div id="content" class="container">
+    <div ui-view></div>
+</div>
