--- a/app/components/login/login.html
+++ b/app/components/login/login.html
@@ -1,1 +1,19 @@
-<div>This is login page :)</div>
+<div class="container-fluid vertical-align">
+    <div class="col-xs-12 col-sm-7 col-md-4 centered">
+        <form name="form" ng-submit="vm.login()" role="form">
+            <div class="form-group">
+                <label for="username">Username</label>
+                <input type="text" name="username" id="username" class="form-control" ng-model="vm.username" required/>
+            </div>
+            <div class="form-group">
+                <label for="password">Password</label>
+                <input type="password" name="password" id="password" class="form-control" ng-model="vm.password" required/>
+            </div>
+            <div class="form-actions">
+                <button type="submit" class="btn btn-primary">Login</button>
+                <a href="#/register" class="btn btn-link">Register</a>
+            </div>
+            <span ng-show="vm.loginError">User does not exist</span>
+        </form>
+    </div>
+</div>
