--- a/app/styles/main.less
+++ b/app/styles/main.less
@@ -1,9 +1,18 @@
 html, body {
-  width: 100%;
   height: 100%;
   background-color: #ffffff;
 }
 
 .container-fluid {
   min-height: 100%;
+}
+
+.centered{
+  float:none;
+  margin: 0 auto;
+}
+
+.vertical-align {
+  display: flex;
+  align-items: center;
 }
